# arena-combat-engine

./: .gitignore  LICENSE  README.md
arena/: CMakeLists.txt
arena-editor/: CMakeLists.txt
arena-editor/src/: main.c
arena/src/: main.c
arena/src/physics/: ode_physics.c  ode_physics.h
arena/src/render/: camera.c  line_render.c  line_render.h  mesh.c  mesh.h
assets/data/effects/: particles.json
assets/data/equipment/: accessories.json  armor.json  brakes.json  chassis.json  gearboxes.json  power_plants.json  suspension.json  tires.json  weapons.json
assets/data/tuning/: gas_acceleration_targets.json
assets/data/vehicles/: sports_car.json
assets/scripts/: freestyle_assist.lua  master.lua  tests.lua
assets/scripts/modules/: abs.lua  tcs.lua
client/: CMakeLists.txt  build.sh  run.sh
client/src/: main.c  main.cpp
client/src/game/: config_loader.c  config_loader.cpp  config_loader.h  equipment_loader.cpp  equipment_loader.h  handling.cpp  handling.h  maneuver.cpp  scale.h  (+2 more)
docs/: CONFIG_GUIDE.md  MANEUVERS.md  PHYSICS_TUNING_STATUS.md  ROADMAP.md  VISUAL_POLISH_ROADMAP.md  architecture.md  assets.md  game-design.md  milestones.md  physics-design.md  planning-ui-design.md  vision.md
docs/proposals/: MANEUVER_SMOOTHING.md  maneuver-scripting-system.md  physics-based-turn-system.md
docs/research/: beamng-analysis.md  carwars-6th-vs-classic.md
experiments/3d-hardware-test/: Makefile  hw_test  main.c
experiments/jolt-vehicle-demo/: CMakeLists.txt  main.cpp
scripts/: extract_books.sh
tools/: blender_extract_vehicle_parts.py  extract_vehicle.sh
(+15 files in other folders)
